--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style>
         *{
             font-family: "Papyrus", sans-serif;
+            text align: center;
+            font-size: 56px;
 
         }
 
